# pyutils

./: .flake8  .gitignore  mypy.ini  pyproject.toml
docs/source/: conf.py  index.rst
pyutils/: angles.py  color.py  dijkstra.py  finite_distr.py  geo2d.py  intervals.py  intifier.py  optimum_tracker.py  partition.py  timer.py
pyutils/geometry/: abstract.py  cart2d.py  exceptions.py  hex2d.py
pyutils/test/: test_angles.py  test_docstrings.py  test_geo2d.py  test_geometry.py  test_intervals.py
