[project]
name = "pyutils"
version = "0.0.1"
authors = [
  { name="Jan Frederik Schaefer" },
]
description = "A collection of snippets I regularly need"
readme = "README.md"
requires-python = ">=3.10"
packages = [
    { include = "pyutils.geometry" }
]

# setuptools doesn't support PEP 660
# [build-system]
# requires = ["setuptools>=62.6"]
# build-backend = "setuptools.build_meta"

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"
